fixed footer on mobile

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,27 @@ footer {
 }
 
 @media (max-width: 480px) { /* Mobile Phones */
+    footer {
+        position: relative; /* Change from fixed */
+        width: 100%;
+        background-color: #f0f0f0;
+        color: black;
+        text-align: center;
+        padding: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px; /* Push footer to the bottom */
+    }
+
+    html, body {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
     #main {
+        flex-grow: 1; /* Push content to take up available space */
         padding: 0 10%;
     }
 
